# Calc_package

./: CMakeLists.txt  Calc  PKGBUILD  README.md  calc.c  mul.h
src/: calc.c
